--- a/sites/all/themes/emindhub/src/less/content/homepage.less
+++ b/sites/all/themes/emindhub/src/less/content/homepage.less
@@ -1,7 +1,8 @@
 body.front {
 
   // Hide page title
-  h1.page-header {
+  h1.page-header,
+  #trail {
     .hidden();
   }
 
