--- a/sites/all/themes/emindhub/src/less/emindhub-styles.less
+++ b/sites/all/themes/emindhub/src/less/emindhub-styles.less
@@ -133,15 +133,15 @@ hr {
 .btn-flash {
 	color: @emerald;
 	text-shadow: 0px 0px 2px rgba(0, 0, 0, 1);
-
-	padding-left: 37px;
-	background-image: url("../images/picto/picto_points_small.png");
 	background-position: left center;
 	background-repeat: no-repeat;
-
 	&:hover {
 		color: @emerald-light;
 	}
+}
+.icon-community {
+	padding-left: 37px;
+	background-image: url("../images/picto/picto_community_small.png");
 }
 
 
