--- a/sites/all/themes/emindhub/src/less/header.less
+++ b/sites/all/themes/emindhub/src/less/header.less
@@ -8,7 +8,10 @@ header#navbar {
 
 
 @media (min-width: @screen-sm-min) {
-	body:not(.cke_editable),
+	// body:not(.cke_editable),
+	body {
+		padding-top: 138px;
+	}
 	body.admin-menu {
 		padding-top: 142px; // .fixed-to-top
 	}
